--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,7 @@
-
+- name: PyInstaller Windows
+  # You may pin to the exact commit or the version.
+  # uses: JackMcKew/pyinstaller-action-windows@a8dee21ad01bbc7e7363d445bb632691b95ba057
+  uses: JackMcKew/pyinstaller-action-windows@v0.1.2
+  with:
+    # Directory containing source code (optional requirements.txt).
+    path: .
